[build-system]
requires = ["setuptools >= 70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdrive"
description = "Google Drive functionalities"
authors = [{ name = "megdorkable" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
homepage = "https://github.com/megdorkable/gdrive"
repository = "https://github.com/megdorkable/gdrive"

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }
dependencies = { file = ["gdrive/requirements.txt"] }

[tool.setuptools.packages.find]
where = ["gdrive"]

[tool.pytest.ini_options]
addopts = "--color=yes --cov --cov-report=xml --cov-report=term -ra"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["gdrive"]
